@@ -1,14 +1,8 @@
 #!/bin/bash
-#
-# start script for freeboard on a linux pc or maybe on a mac too
-#
-#SIGNALK_HOME=/home/pi/freeboard
-SIGNALK_HOME=`pwd`
 
-JAR=signalk-server-0.0.1-SNAPSHOT-jar-with-dependencies.jar
-#
-cd $SIGNALK_HOME
-mkdir logs
+# start script for signalk-server-java
+
+JAR="signalk-server-java-0.0.1-SNAPSHOT-jar-with-dependencies.jar"
 
 #temporary until linux-arm.jar is in purejavacom.jar
 export LD_LIBRARY_PATH=$SIGNALK_HOME/jna
@@ -27,11 +21,8 @@ if [ -n "$JAVA_HOME" ]; then
 fi
 
 EXT="-Djava.util.Arrays.useLegacyMergeSort=true"
-MEM="-Xmx32m -XX:PermSize=32m -XX:MaxPermSize=48m"
+MEM="-Xmx32m"
 
-LOG4J=-Dlog4j.configuration=file://$SIGNALK_HOME/conf/log4j.properties
+LOG4J=-Dlog4j.configuration=file://./conf/log4j.properties
 
-cd $SIGNALK_HOME
-echo "Starting: $JAVA $EXT $LOG4J $MEM -jar target/$JAR >>logs/start.log 2>&1 &" >>logs/start.log 2>&1 &
-$JAVA $EXT $LOG4J $MEM -jar target/$JAR 
-#>>logs/start.log 2>&1 &
+$JAVA $EXT $LOG4J $MEM -jar target/$JAR
